objects/HP_Quote__c.object
<CustomObject>
    <description>Custom quote object to capture quotes from Quote IDS and to support future integration with CPQ tools</description>
    <fields>
        <fullName>AMPID_TS__c</fullName>
        <label>AMP ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Opportunity_Name__r.Account.Id ,  Opportunity_Name__r.Account.Name )</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Term__c</fullName>
        <label>Agreement Term</label>
        <picklist>
            <picklistValues>
                <fullName>Evergreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMI_ID__c</fullName>
        <externalId>true</externalId>
        <label>BMI ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMI_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BMI Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>HP Quotes</relationshipLabel>
        <relationshipName>HP_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Province__c</fullName>
        <label>Bill To State/Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_Address_1__c</fullName>
        <label>Bill To Street Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_Address_2__c</fullName>
        <label>Bill To Street Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_Address_3__c</fullName>
        <label>Bill To Street Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street_Address__c</fullName>
        <formula>Bill_To_Street_Address_1__c &amp; BR() &amp;  Bill_To_Street_Address_2__c &amp; BR() &amp; Bill_To_Street_Address_3__c</formula>
        <label>Bill To Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Postal_Code__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Model__c</fullName>
        <label>Billing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Creator__c</fullName>
        <formula>Customer_Intended_Document__r.CI_Creator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Number__c</fullName>
        <formula>Customer_Intended_Document__r.CI_Number_CI_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Status__c</fullName>
        <formula>Customer_Intended_Document__r.CI_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_URL__c</fullName>
        <formula>Customer_Intended_Document__r.CI_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin_Email__c</fullName>
        <label>Contract Admin Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin_Name__c</fullName>
        <label>Contract Admin Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Admin_Phone__c</fullName>
        <label>Contract Admin Phone</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_DT__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Contacts__c</fullName>
        <label>Customer Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Intended_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Intended Document</label>
        <referenceTo>Customer_Intended_Document__c</referenceTo>
        <relationshipLabel>HP Quotes</relationshipLabel>
        <relationshipName>HP_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Phase__c</fullName>
        <label>Deal Phase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Region__c</fullName>
        <label>Deal Region (Remove)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(Discount_Amount__c == 0,0,Discount_Amount__c / ( Total__c + Discount_Amount__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eclipse_ID__c</fullName>
        <label>Eclipse ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiring_Contract_Number__c</fullName>
        <label>Expiring Contract Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Contract_SW__c</fullName>
        <label>Group Contract</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Procurement__c</fullName>
        <label>HW Procurement</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Expired__c</fullName>
        <formula>IF(TODAY()  &gt;  Quote_End_Date__c,&quot;TRUE&quot; , &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Expired</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Synced_to_Opportunity__c</fullName>
        <label>Synced to Opportunity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merged_Quote_Information__c</fullName>
        <label>Merged Quote Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiyear_Indicator__c</fullName>
        <label>Multi Year Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Contact_Email_Address__c</fullName>
        <formula>Support_Request__r.CPQ_Routing_Email__c</formula>
        <label>Operations Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity_Name__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HP Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity_Name__r.StageName ,&quot;06 - Won, Deploy &amp; Expand&quot;), &quot;06 - Won, Deploy &amp; Expand&quot;, IF(ISPICKVAL(Opportunity_Name__r.StageName ,&quot;HP Not Pursued&quot;), &quot;HP Not Pursued&quot;, IF(ISPICKVAL(Opportunity_Name__r.StageName ,&quot;Lost&quot;), &quot;Lost&quot;, &quot;Blank&quot;)))</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Contact__c</fullName>
        <label>Ordering Contact</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Quote_System__c</fullName>
        <label>Originating Quote System</label>
        <picklist>
            <picklistValues>
                <fullName>Watson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eclipse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartquote ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quicksilver DealONE Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnlinePriceBook ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreSalesSupport - RMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed BG Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Opportunity ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ePrime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP O&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O &amp; C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass ES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Originating_System_Quote_Creation_Date__c</fullName>
        <label>Originating System Quote Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Originating_System_Quote_ID__c</fullName>
        <label>Quote ID Doc #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_System_Quote_Version__c</fullName>
        <label>Quote Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Age__c</fullName>
        <formula>TODAY() - Originating_System_Quote_Creation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Complete_DT__c</fullName>
        <label>Quote Complete DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Configuration_Created_DT__c</fullName>
        <label>Quote/Configuration Created DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Country__c</fullName>
        <label>Quote Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Description__c</fullName>
        <label>Quote Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Detail_URL__c</fullName>
        <label>Quote Detail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quote_Detail__c</fullName>
        <formula>IF( ISPICKVAL( Originating_Quote_System__c , &apos;BMI&apos;) , IF( ISBLANK(Quote_Detail_URL__c),&apos;&apos;, HYPERLINK(&quot;/apex/CPQOpenBMIDocumentURL?id=&quot;&amp;Id, LEFT(Quote_Detail_URL__c,47)+&quot;...&quot;)), Quote_Detail_URL__c)</formula>
        <label>Quote Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_End_Date__c</fullName>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Quote External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote_IDS_Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote IDS Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_IDS_ID__c</fullName>
        <label>Quote IDS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_IDS_Version__c</fullName>
        <label>Quote IDS Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Owner__c</fullName>
        <label>Quote Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Request_Sent_Submitted_DT__c</fullName>
        <label>Quote Request Sent/Submitted DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Start_Date__c</fullName>
        <label>Quote Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <label>Quote Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_City__c</fullName>
        <label>Quote To City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Country__c</fullName>
        <label>Quote To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Name__c</fullName>
        <label>Quote To Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_State_Province__c</fullName>
        <label>Quote To State/Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Street_Address_1__c</fullName>
        <label>Quote To Street Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Street_Address_2__c</fullName>
        <label>Quote To Street Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Street_Address_3__c</fullName>
        <label>Quote To Street Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Street_Address__c</fullName>
        <formula>Quote_To_Street_Address_1__c &amp; BR() &amp; Quote_To_Street_Address_2__c &amp; BR() &amp; Quote_To_Street_Address_3__c</formula>
        <label>Quote To Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_To_Zip_Postal_Code__c</fullName>
        <label>Quote To Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <formula>IF(AND(ISPICKVAL(Originating_Quote_System__c,&quot;BMI&quot;),OR(ISBLANK(Support_Request__c),ISNULL(Support_Request__c))),&quot;Self&quot;,
IF(AND(NOT(ISPICKVAL(Originating_Quote_System__c,&quot;BMI&quot;)),OR(ISNULL(BMI_ID__c),ISBLANK(BMI_ID__c))), &quot;Assisted&quot;,
&quot;Hybrid&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <description>Creating new field for the workflow &quot;HP Quote-Email Notification&quot;</description>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Return_to_Support_Count__c</fullName>
        <label>Return to Support Count</label>
        <summaryFilterItems>
            <field>HP_Quote_Line_Item__c.Return_to_Support__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>HP_Quote_Line_Item__c.HP_Quote_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Return_to_Support_Value1__c</fullName>
        <label>Return to Support Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_to_Support__c</fullName>
        <formula>CASE( TEXT( Return_to_Support_Count__c ) , &quot;0&quot;, &quot;N&quot;, &quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return to Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <formula>TEXT(Opportunity_Name__r.Route_To_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go To Market Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Quote_Number__c</fullName>
        <displayFormat>OQ-{00000000}</displayFormat>
        <label>SFDC Quote Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Agreement_ID__c</fullName>
        <label>SAID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <label>Ship To State/Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Address_1__c</fullName>
        <label>Ship To Street Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Address_2__c</fullName>
        <label>Ship To Street Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Address_3__c</fullName>
        <label>Ship To Street Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street_Address__c</fullName>
        <formula>Ship_To_Street_Address_1__c &amp; BR() &amp; Ship_To_Street_Address_2__c &amp; BR() &amp; Ship_To_Street_Address_3__c</formula>
        <label>Ship To Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Postal_Code__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Handling__c</fullName>
        <label>Shipping &amp; Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Approval_DT__c</fullName>
        <label>Special Pricing Approval DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_Escalated_DT__c</fullName>
        <label>Special Pricing Escalated DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Special_Pricing_In_Progress_DT__c</fullName>
        <label>Special Pricing In Progress DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Support_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Request</label>
        <referenceTo>Support_Request__c</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synced_To_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_in_Months__c</fullName>
        <label>Term in Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pricing_of_Previous_Contract__c</fullName>
        <label>Total Pricing of Previous Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>HP Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Originating_Quote_System__c</columns>
        <columns>Originating_System_Quote_ID__c</columns>
        <columns>Originating_System_Quote_Version__c</columns>
        <columns>Quote_Start_Date__c</columns>
        <columns>Quote_End_Date__c</columns>
        <columns>Quote_Status__c</columns>
        <columns>Synced_To_Opportunity__c</columns>
        <columns>Last_Synced_to_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HP Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP Quotes</pluralLabel>
    <recordTypes>
        <fullName>BMI_Quote</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is in BMI Quote Completed status</description>
        <label>BMI Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compass_ES</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is from SAP Compass and Quote status should be completed.</description>
        <label>Compass ES</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eclipse</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is from Eclipse Compass and  Quote status should be completed.</description>
        <label>Eclipse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Header</fullName>
        <active>true</active>
        <description>Displays basic quote header information</description>
        <label>Quote Header</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Summary</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is in Completed status</description>
        <label>Quote Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAP_Compass</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is from SAP O &amp; C and  Quote status should be completed.</description>
        <label>O &amp; C</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAP_O_C</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is from SAP O&amp;C and Quote status should be completed.</description>
        <label>SAP O&amp;C</label>
    </recordTypes>
    <recordTypes>
        <fullName>Watson_CCA</fullName>
        <active>true</active>
        <description>Displays detailed quote information when Quote is from Watson or CCA or BMI and  Quote status should be completed.</description>
        <label>Watson &amp; CCA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_to_change_Opportunity_Id</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT($Setup.Global_Config__c.CPQ_Mute_Validation_Rule__c) ,
ISCHANGED(Opportunity_Name__c ) ||  ISCHANGED( Name ),(NOT(ISPICKVAL(Originating_Quote_System__c,&apos;BMI&apos;))))</errorConditionFormula>
        <errorMessage>You don&apos;t have access to change the Name and Opportunity.</errorMessage>
    </validationRules>
</CustomObject>